@@ -13,6 +13,9 @@ What's New in Python 3.0 release candiate 3?
 Core and Builtins
 -----------------
 
+- Issue #3705: Command-line arguments were not correctly decoded when the
+  terminal does not use UTF8.
+
 Library
 -------
 
